[project]
name = "langgraph-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "jsonschema>=4.25.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "langgraph-cli[inmem]>=0.4.2",
    "openai>=1.106.1",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "pillow>=10.0.0",
    "streamlit>=1.49.1",
    "uvicorn>=0.35.0",
    "langchain-ollama>=0.3.8",
]
